--- a/inforum_flutterapp/pubspec.yaml
+++ b/inforum_flutterapp/pubspec.yaml
@@ -1,5 +1,5 @@
-name: inforum_app
-description: A forum application.
+name: inforum
+description: A new forum application.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
@@ -33,7 +33,9 @@ dependencies:
   simple_animations: ^2.2.3
   shared_preferences: ^0.5.12+4
 
+
 dev_dependencies:
+  flutter_native_splash: ^0.1.9
   flutter_test:
     sdk: flutter
 
@@ -48,11 +50,13 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
+
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
-
+  assets:
+    - images/splash.png
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
 
@@ -78,3 +82,7 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+flutter_native_splash:
+  color: "42a5f5"
+  image: images/splash.png
+  android_disable_fullscreen: true
