--- a/inforum/pubspec.yaml
+++ b/inforum/pubspec.yaml
@@ -57,6 +57,7 @@ flutter:
   #   - images/a_dot_ham.jpeg
   assets:
     - images/splash.png
+    - images/test.jpg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
 
