--- a/inforum/pubspec.yaml
+++ b/inforum/pubspec.yaml
@@ -25,11 +25,7 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.3
+  collection: ^1.14.13
   http: ^0.12.2
   animations: ^1.1.2
   simple_animations: ^2.2.3
