--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   collection: ^1.14.13
   dio: ^3.0.4
   http: ^0.12.2
+  json_annotation: ^2.0.0
   animations: ^1.1.2
   simple_animations: ^2.2.3
   shared_preferences: ^0.5.12+4
@@ -35,6 +36,7 @@ dependencies:
 
 
 dev_dependencies:
+  build_runner: ^1.0.0
   flutter_native_splash: ^0.1.9
   flutter_test:
     sdk: flutter
