primary page now works.
fixed and refactored some code.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   shared_preferences: ^0.5.12+4
   extended_nested_scroll_view: ^2.0.0
   toast: ^0.1.5
+  image_picker: ^0.6.7+22
 
 
 dev_dependencies:
