--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   extended_nested_scroll_view: ^2.0.0
   toast: ^0.1.5
   image_picker: ^0.6.7+22
+  crypto: ^2.1.5
 
 
 dev_dependencies:
