--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,7 @@ dependencies:
   simple_animations: ^2.2.3
   shared_preferences: ^0.5.12+4
   extended_nested_scroll_view: ^2.0.0
-  toast: ^0.1.5
+  fluttertoast: ^7.1.6
   image_picker: ^0.6.7+22
   crypto: ^2.1.5
   photo_view: ^0.10.3
@@ -40,6 +40,9 @@ dependencies:
   share: ^0.6.5+4
   dependencies:
   skeleton_text: ^2.0.2
+  flutter_cache_manager: ^2.1.1
+  image_gallery_saver: '^1.6.8'
+  permission_handler: ^5.1.0+2
 
 
 dev_dependencies:
