--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,7 @@ dependencies:
   simple_animations: ^2.2.3
   shared_preferences: ^0.5.12+4
   extended_nested_scroll_view: ^2.0.0
-  fluttertoast: ^7.1.6
+#  fluttertoast: ^7.1.6
   image_picker: ^0.6.7+22
   crypto: ^2.1.5
   photo_view: ^0.10.3
