--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   permission_handler: ^5.1.0+2
   path_provider: ^1.6.27
   intl: ^0.17.0
+  flutter_staggered_grid_view: ^0.3.4
+  heic_to_jpg: ^0.1.3
 #  file_picker: ^3.0.0
 
 
