--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,33 +25,27 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-  collection: ^1.14.13
-  dio: ^3.0.4
-  json_annotation: ^2.0.0
-  animations: ^1.1.2
-  simple_animations: ^2.2.3
-  shared_preferences: ^0.5.12+4
-#  fluttertoast: ^7.1.6
-  image_picker: ^0.6.7+22
-  crypto: ^2.1.5
-  photo_view: ^0.10.3
-  cached_network_image: ^2.5.0
-  share: ^0.6.5+4
-  dependencies:
-  skeleton_text: ^2.0.2
-  flutter_cache_manager: ^2.1.1
-  image_gallery_saver: '^1.6.8'
-  permission_handler: ^5.1.0+2
-  path_provider: ^1.6.27
+  collection: ^1.15.0
+  dio: ^4.0.0-beta6
+  json_annotation: ^4.0.0
+  animations: ^2.0.0
+  simple_animations: ^3.0.0
+  shared_preferences: ^2.0.3
+  crypto: ^3.0.0
+  photo_view: ^0.11.0
+  cached_network_image: ^3.0.0-nullsafety
+  share: ^2.0.0
+  flutter_cache_manager: ^3.0.0-nullsafety.1
+  permission_handler: ^6.0.1
+  path_provider: ^2.0.1
+  file_picker: ^3.0.0
   intl: ^0.17.0
-  flutter_staggered_grid_view: ^0.3.4
-  heic_to_jpg: ^0.1.3
-#  file_picker: ^3.0.0
+  flutter_staggered_grid_view: ^0.4.0-nullsafety.3
+  image: ^3.0.1
 
 
 dev_dependencies:
-  build_runner: ^1.0.0
-  flutter_native_splash: ^0.1.9
+  flutter_native_splash: ^1.0.3
   flutter_test:
     sdk: flutter
 
