--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,7 +42,7 @@ dependencies:
   intl: ^0.17.0
   flutter_staggered_grid_view: ^0.4.0-nullsafety.3
   image: ^3.0.1
-
+  msix: ^1.0.6
 
 dev_dependencies:
   flutter_native_splash: ^1.0.3
