--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,11 +38,13 @@ dependencies:
   flutter_cache_manager: ^3.0.0-nullsafety.1
   permission_handler: ^6.0.1
   path_provider: ^2.0.1
-  file_picker: ^3.0.0
+  # file_picker: ^3.0.0
   intl: ^0.17.0
   flutter_staggered_grid_view: ^0.4.0-nullsafety.3
   image: ^3.0.1
   msix: ^1.0.6
+  file_selector: ^0.8.2
+  file_selector_windows: ^0.0.2
 
 dev_dependencies:
   flutter_native_splash: ^1.0.3
