--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,5 @@ lib/data/webConfig.dart
 *.exe
 windows/out/build/
 windows/.vs
+macos/Flutter/ephemeral/flutter_export_environment.sh
+macos/Flutter/ephemeral/Flutter-Generated.xcconfig
