--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,4 @@ windows/out/build/
 windows/.vs
 macos/Flutter/ephemeral/flutter_export_environment.sh
 macos/Flutter/ephemeral/Flutter-Generated.xcconfig
+pubspec.lock
