--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,5 @@ windows/.vs
 macos/Flutter/ephemeral/flutter_export_environment.sh
 macos/Flutter/ephemeral/Flutter-Generated.xcconfig
 pubspec.lock
+macos/Flutter/ephemeral/Flutter-Generated.xcconfig
+macos/Flutter/ephemeral/flutter_export_environment.sh
