updated image clip ways.

--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,4 @@ macos/Flutter/ephemeral/Flutter-Generated.xcconfig
 pubspec.lock
 macos/Flutter/ephemeral/Flutter-Generated.xcconfig
 macos/Flutter/ephemeral/flutter_export_environment.sh
+pubspec.lock
