--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   flutter_staggered_grid_view: ^0.4.0-nullsafety.3
   image: ^3.0.1
   msix: ^1.0.6
+  image_gallery_saver: ^1.6.9
   file_selector: ^0.8.2
   file_selector_windows: ^0.0.2
   file_selector_linux: ^0.0.2
